1. Change Headings to white to maintain uniformity 2. Fix styling for transaction history page 3. fix home page content overflow 4. add contact us page and change font to arial 5. add footer for all pages 6. style footer

--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -34,7 +34,7 @@
 /* Title Styling */
 .about-us-title {
     font-family: Arial, sans-serif; 
-    color: #FFBF00;
+    color: white;
     font-size: 4rem;
     text-align: center;
     margin: 0;
