--- a/src/styles/filter.css
+++ b/src/styles/filter.css
@@ -6,8 +6,7 @@
     padding: 15px; /* Consistent padding */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
     border-radius: 5px; /* Rounded corners */
-    background-color:  rgb(237, 231, 231); /* White background for clarity */
-
+    background-color:  rgba(255, 255, 255, 0.9);
     display: flex;
   justify-content:space-between;
   align-items: center;
