--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -14,7 +14,7 @@
 }
 
 .table th {
-    background-color: #f9f9f9; /* Slightly lighter background for header */
+    background-color: #acd3f5; /*Slightly lighter background for header*/
     font-weight: bold; /* Bold font for headers */
 }
 
